etd-stats/functions/function_service.yml
apiVersion: v1
kind: Service
metadata:
  name: function-service
  namespace: functions
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
  selector:
    app: functions
