etd-stats/functions/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  namespace: functions
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - functions.etdstatsapi.net
      secretName: ingress-secret
  rules:
    - host: functions.etdstatsapi.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: function-service
                port:
                  number: 80
